--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -2,3 +2,8 @@ spring:
   application:
     name: discovery-service
 
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
